# local

Test/: Описание программы.docx  Тестовое задание UNIX.doc
Test/Client/Source/: CMakeLists.txt
Test/Client/Source/Header Files/: Client.h  CommonTypes.h  ConsoleWriter.h  DataType.h  Helper.h  InputReader.h  Operation.h  OperationContext.h  PackageType.h  ReadDataOperation.h  ReadHeaderOperation.h  Session.h  WriteDataOperation.h  WritePingOperation.h
Test/Client/Source/Source Files/: CMakeLists.txt  Client.cpp  ConsoleWriter.cpp  InputReader.cpp  OperationContext.cpp  ReadDataOperation.cpp  ReadHeaderOperation.cpp  Session.cpp  WriteDataOperation.cpp  WritePingOperation.cpp  main.cpp
Test/Server/Source/: CMakeLists.txt  CalcServer.properties
Test/Server/Source/Header Files/: Client.h  CommonTypes.h  Exceptions.h  Helper.h  ReadDataOperation.h  ReadHeaderOperation.h  Server.h  ServiceApplication.h  ServiceTask.h  Session.h  TaskExecutor.h  WriteDataOperation.h
Test/Server/Source/Source Files/: CMakeLists.txt  Client.cpp  Operation.cpp  ReadDataOperation.cpp  ReadHeaderOperation.cpp  Server.cpp  ServiceApplication.cpp  ServiceTask.cpp  TaskExecutor.cpp  WriteDataOperation.cpp  main.cpp
Test/Server/Source/UnitTests/: CMakeLists.txt  FactorizationUnitTest.cpp
